--- a/Example/TSMessages.xcodeproj/xcshareddata/xcschemes/TSMessages.xcscheme
+++ b/Example/TSMessages.xcodeproj/xcshareddata/xcschemes/TSMessages.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "04C5D70A1BE89FE500631501"
-               BuildableName = "TSMessages.framework"
-               BlueprintName = "TSMessages"
+               BuildableName = "TSMessage.framework"
+               BlueprintName = "TSMessage"
                ReferencedContainer = "container:TSMessages.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,8 +46,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "04C5D70A1BE89FE500631501"
-            BuildableName = "TSMessages.framework"
-            BlueprintName = "TSMessages"
+            BuildableName = "TSMessage.framework"
+            BlueprintName = "TSMessage"
             ReferencedContainer = "container:TSMessages.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,8 +64,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "04C5D70A1BE89FE500631501"
-            BuildableName = "TSMessages.framework"
-            BlueprintName = "TSMessages"
+            BuildableName = "TSMessage.framework"
+            BlueprintName = "TSMessage"
             ReferencedContainer = "container:TSMessages.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
