--- a/Example/TSMessages.xcodeproj/xcshareddata/xcschemes/TSMessages_demo.xcscheme
+++ b/Example/TSMessages.xcodeproj/xcshareddata/xcschemes/TSMessages_demo.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F589195388D20070C39A"
-               BuildableName = "TSMessages_demo.app"
-               BlueprintName = "TSMessages_demo"
+               BuildableName = "TSMessages.app"
+               BlueprintName = "TSMessages"
                ReferencedContainer = "container:TSMessages.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -43,8 +43,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "TSMessages_demo.app"
-            BlueprintName = "TSMessages_demo"
+            BuildableName = "TSMessages.app"
+            BlueprintName = "TSMessages"
             ReferencedContainer = "container:TSMessages.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -66,8 +66,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "TSMessages_demo.app"
-            BlueprintName = "TSMessages_demo"
+            BuildableName = "TSMessages.app"
+            BlueprintName = "TSMessages"
             ReferencedContainer = "container:TSMessages.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -85,8 +85,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "TSMessages_demo.app"
-            BlueprintName = "TSMessages_demo"
+            BuildableName = "TSMessages.app"
+            BlueprintName = "TSMessages"
             ReferencedContainer = "container:TSMessages.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
